--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "snake-game"
+name = "snake_game"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+wasm-bindgen = "0.2.63"
+wee_alloc = "0.4.5"
 
-[[bin]]
-name = "snake-game"
-path = "main.rs"
+[lib]
+crate-type = ["cdylib"]
