--- a/www/package.json
+++ b/www/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "snake_game": "file:../pkg"
   },
   "devDependencies": {
     "webpack-dev-server": "^4.11.1"
